--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -143,27 +143,99 @@
         </div>
       </div>
 
-      <!-- Quick Stats -->
-      <div class="quick-stats">
-        <div class="quick-stat">
-          <i class="fas fa-users"></i>
-          <h4 id="totalCustomers">0</h4>
-          <p>Active Customers</p>
+      <!-- Debt Summary Cards -->
+      <div class="row mb-4">
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card debt-card">
+            <div class="stat-icon bg-danger">
+              <i class="fas fa-credit-card"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="totalOutstandingDebt">$0</h3>
+              <p>Outstanding Debt</p>
+            </div>
+          </div>
         </div>
-        <div class="quick-stat">
-          <i class="fas fa-truck"></i>
-          <h4 id="totalSuppliers">0</h4>
-          <p>Suppliers</p>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card debt-card">
+            <div class="stat-icon bg-warning">
+              <i class="fas fa-exclamation-triangle"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="overdueDebts">0</h3>
+              <p>Overdue Debts</p>
+            </div>
+          </div>
         </div>
-        <div class="quick-stat">
-          <i class="fas fa-cubes"></i>
-          <h4 id="totalMaterials">0</h4>
-          <p>Material Types</p>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card debt-card">
+            <div class="stat-icon bg-dark">
+              <i class="fas fa-percentage"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="collectionRate">0%</h3>
+              <p>Collection Rate</p>
+            </div>
+          </div>
         </div>
-        <div class="quick-stat">
-          <i class="fas fa-exclamation-triangle"></i>
-          <h4 id="lowStockItems">0</h4>
-          <p>Low Stock Items</p>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card debt-card">
+            <div class="stat-icon bg-secondary">
+              <i class="fas fa-money-bill-wave"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="overdueAmount">$0</h3>
+              <p>Overdue Amount</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Business Summary Cards -->
+      <div class="row mb-4">
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-info">
+              <i class="fas fa-users"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="totalCustomers">0</h3>
+              <p>Active Customers</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-secondary">
+              <i class="fas fa-truck"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="totalSuppliers">0</h3>
+              <p>Suppliers</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-primary">
+              <i class="fas fa-cubes"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="totalCategories">0</h3>
+              <p>Material Categories</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-warning">
+              <i class="fas fa-exclamation-triangle"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="lowStockItems">0</h3>
+              <p>Low Stock Items</p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -195,6 +267,37 @@
         </div>
       </div>
 
+      <!-- Debt Management Section -->
+      <div class="row">
+        <div class="col-lg-8 mb-4">
+          <div class="content-card">
+            <h4 class="mb-3">
+              <i class="fas fa-chart-pie me-2"></i>
+              Debt Status Distribution
+            </h4>
+            <div class="chart-container">
+              <canvas id="debtStatusChart"></canvas>
+            </div>
+          </div>
+        </div>
+        
+        <!-- Recent Debt Activities -->
+        <div class="col-lg-4 mb-4">
+          <div class="content-card">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+              <h4 class="mb-0">
+                <i class="fas fa-credit-card me-2"></i>
+                Recent Debts
+              </h4>
+              <a href="debts.html" class="btn btn-sm btn-outline-primary">View All</a>
+            </div>
+            <div id="recentDebts">
+              <!-- Recent debts will be loaded here -->
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <!-- Top Selling Materials -->
         <div class="col-lg-6 mb-4">
@@ -211,25 +314,16 @@
 
         <!-- Inventory Status -->
         <div class="col-lg-6 mb-4">
-          <div class="table-container">
-            <h4 class="mb-3">
-              <i class="fas fa-warehouse me-2"></i>
-              Inventory Status
-            </h4>
-            <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Material</th>
-                    <th>Stock</th>
-                    <th>Status</th>
-                    <th>Value</th>
-                  </tr>
-                </thead>
-                <tbody id="inventoryStatusTable">
-                  <!-- Inventory data will be loaded here -->
-                </tbody>
-              </table>
+          <div class="content-card">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+              <h4 class="mb-0">
+                <i class="fas fa-warehouse me-2"></i>
+                Inventory Status
+              </h4>
+              <a href="inventory.html" class="btn btn-sm btn-outline-primary">View All</a>
+            </div>
+            <div id="inventoryStatusList">
+              <!-- Inventory data will be loaded here -->
             </div>
           </div>
         </div>
