--- a/frontend/customers.html
+++ b/frontend/customers.html
@@ -153,7 +153,7 @@
 
     <!-- Customer Form Modal -->
     <div class="modal" id="customerModal">
-      <div class="modal-content">
+      <div class="modal-content modal-lg">
         <div class="modal-header">
           <h3 class="modal-title" id="modalTitle">Add New Customer</h3>
           <button class="close-btn" id="closeModal">
@@ -162,130 +162,128 @@
         </div>
 
         <form id="customerForm">
-          <div class="form-grid">
-            <div class="form-group">
-              <label class="form-label" for="customerName"
-                >Customer Name *</label
-              >
-              <input
-                type="text"
-                id="customerName"
-                class="form-input"
-                required
-              />
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label required" for="customerName"
+                  >Customer Name</label
+                >
+                <input
+                  type="text"
+                  id="customerName"
+                  class="form-control"
+                  required
+                />
+              </div>
             </div>
 
-            <div class="form-group">
-              <label class="form-label" for="customerType">Customer Type</label>
-              <select id="customerType" class="form-input">
-                <option value="individual">Individual</option>
-                <option value="company">Company</option>
-                <option value="government">Government</option>
-                <option value="ngo">NGO/Non-profit</option>
-              </select>
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="customerType">Customer Type</label>
+                <select id="customerType" class="form-select">
+                  <option value="individual">Individual</option>
+                  <option value="company">Company</option>
+                  <option value="government">Government</option>
+                  <option value="ngo">NGO/Non-profit</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="contactPerson"
+                  >Contact Person</label
+                >
+                <input type="text" id="contactPerson" class="form-control" />
+              </div>
             </div>
 
-            <div class="form-group">
-              <label class="form-label" for="contactPerson"
-                >Contact Person</label
-              >
-              <input type="text" id="contactPerson" class="form-input" />
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="email">Email</label>
+                <input type="email" id="email" class="form-control" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label required" for="phone">Phone</label>
+                <input type="tel" id="phone" class="form-control" required />
+              </div>
             </div>
 
-            <div class="form-group">
-              <label class="form-label" for="email">Email</label>
-              <input type="email" id="email" class="form-input" />
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="alternativePhone"
+                  >Alternative Phone</label
+                >
+                <input type="tel" id="alternativePhone" class="form-control" />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="taxId">Tax ID</label>
+                <input type="text" id="taxId" class="form-control" />
+              </div>
             </div>
 
-            <div class="form-group">
-              <label class="form-label" for="phone">Phone *</label>
-              <input type="tel" id="phone" class="form-input" required />
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="creditLimit">Credit Limit</label>
+                <input
+                  type="number"
+                  id="creditLimit"
+                  class="form-control"
+                  min="0"
+                  step="0.01"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="paymentTerms">Payment Terms</label>
+                <input
+                  type="text"
+                  id="paymentTerms"
+                  class="form-control"
+                  placeholder="e.g., Net 30 days"
+                />
+              </div>
             </div>
 
-            <div class="form-group">
-              <label class="form-label" for="alternativePhone"
-                >Alternative Phone</label
-              >
-              <input type="tel" id="alternativePhone" class="form-input" />
+            <div class="col-md-6">
+              <div class="mb-3">
+                <label class="form-label" for="status">Status</label>
+                <select id="status" class="form-select">
+                  <option value="active">Active</option>
+                  <option value="inactive">Inactive</option>
+                  <option value="blacklisted">Blacklisted</option>
+                </select>
+              </div>
             </div>
+          </div>
 
-            <div class="form-group full-width">
-              <label class="form-label" for="address">Address *</label>
-              <textarea
-                id="address"
-                class="form-input form-textarea"
-                required
-              ></textarea>
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="city">City *</label>
-              <input type="text" id="city" class="form-input" required />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="state">State *</label>
-              <input type="text" id="state" class="form-input" required />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="postalCode">Postal Code</label>
-              <input type="text" id="postalCode" class="form-input" />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="country">Country *</label>
-              <input
-                type="text"
-                id="country"
-                class="form-input"
-                value="Nigeria"
-                required
-              />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="taxId">Tax ID</label>
-              <input type="text" id="taxId" class="form-input" />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="creditLimit">Credit Limit</label>
-              <input
-                type="number"
-                id="creditLimit"
-                class="form-input"
-                min="0"
-                step="0.01"
-              />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="paymentTerms">Payment Terms</label>
-              <input
-                type="text"
-                id="paymentTerms"
-                class="form-input"
-                placeholder="e.g., Net 30 days"
-              />
-            </div>
-
-            <div class="form-group">
-              <label class="form-label" for="status">Status</label>
-              <select id="status" class="form-input">
-                <option value="active">Active</option>
-                <option value="inactive">Inactive</option>
-                <option value="blacklisted">Blacklisted</option>
-              </select>
-            </div>
-
-            <div class="form-group full-width">
-              <label class="form-label" for="notes">Notes</label>
-              <textarea
-                id="notes"
-                class="form-input form-textarea"
-                placeholder="Additional notes about the customer..."
-              ></textarea>
+          <div class="row">
+            <div class="col-12">
+              <div class="mb-3">
+                <label class="form-label" for="notes">Notes</label>
+                <textarea
+                  id="notes"
+                  class="form-control"
+                  rows="3"
+                  placeholder="Additional notes about the customer..."
+                ></textarea>
+              </div>
             </div>
           </div>
 
