--- a/frontend/debts.html
+++ b/frontend/debts.html
@@ -8,12 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgifdDr+K5tJMUOWvn7i9kXy8Y7HHffQ7GRUGNqkHxoSp"
-      crossorigin="anonymous"
-    />
+    <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="src/css/styles.css" />
     <link rel="stylesheet" href="src/css/debts.css" />
     <link rel="stylesheet" href="src/css/print.css" />
