--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login – Building Materials</title>
+    <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="src/css/styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgifdDr+K5tJMUOWvn7i9kXy8Y7HHffQ7GRUGNqkHxoSp"
-      crossorigin="anonymous"
-    />
   </head>
   <body class="bg-light d-flex align-items-center" style="height: 100vh">
     <div class="container">
