--- a/frontend/reports.html
+++ b/frontend/reports.html
@@ -8,12 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgifdDr+K5tJMUOWvn7i9kXy8Y7HHffQ7GRUGNqkHxoSp"
-      crossorigin="anonymous"
-    />
+    <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="src/css/reports.css" />
   </head>
   <body>
@@ -308,11 +303,6 @@
       </div>
     </main>
 
-    <script 
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous">
-    </script>
     <script src="src/js/pages/reports.js" type="module"></script>
   </body>
 </html>
