--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expenses - BuildMat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="src/css/expenses.css" />
   </head>
   <body>
@@ -370,6 +370,7 @@
       class="toast-container position-fixed top-0 end-0 p-3"
     ></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="src/js/pages/expenses.js"></script>
     <script type="module" src="src/js/auth.js"></script>
   </body>
