--- a/frontend/purchases.html
+++ b/frontend/purchases.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Purchase Orders - BuildMat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="src/css/purchases.css" />
   </head>
   <body>
@@ -331,6 +331,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="src/js/pages/purchases.js" type="module"></script>
     <script src="src/js/auth.js" type="module"></script>
   </body>
