--- a/frontend/suppliers.html
+++ b/frontend/suppliers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Suppliers – BMMS</title>
-    <script type="module" src="/src/main.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -497,6 +497,7 @@
       </div>
     </div>
     <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="src/js/pages/suppliers.js"></script>
     <script type="module" src="src/js/auth.js"></script>
   </body>
